--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -12,8 +12,8 @@
 <% @departments.each do |department| %>
   <tr>
     <td><%= department.name %></td>
-    <td><%= department.institute %></td>
-    <td><%= link_to 'Show', institute_department(@institute, department) %></td>
+    <td><%= department.institute.name %></td>
+    <td><%= link_to 'Show', institute_department_path(@institute, department) %></td>
     <td><%= link_to 'Edit', edit_institute_department_path(@institute, department) %></td>
     <td><%= link_to 'Destroy', institute_department_path(@institute, department), method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
