--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@batch, @document] do |f| %>
+<%= form_for [@batch, @document], :url => batch_documents_path(@batch), :html => { :multipart => true } do |f| %>
   <% if @document.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@document.errors.count, "error") %> prohibited this document from being saved:</h2>
@@ -17,16 +17,13 @@
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :rows => 4 %>
   </div>
   <div class="field">
-    <%= f.label :batch %><br />
-    <%= f.text_field :batch %>
+    <%= f.label :docfile %><br />
+    <%= f.file_field :docfile %>
   </div>
-  <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
-  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
