--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -26,4 +26,4 @@
 
 <br />
 
-<%= link_to 'New Document', new_batch_document_path(@batch) %>
+<%= link_to 'New Document', new_batch_document_path(@batch), :remote => true %>
