paperclip, publicactivity, user profile done

--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -13,15 +13,13 @@
 <% @announcements.each do |announcement| %>
   <tr>
     <td><%= announcement.message %></td>
-    <td><%= announcement.user %></td>
-    <td><%= announcement.batch %></td>
-    <td><%= link_to 'Show', announcement %></td>
-    <td><%= link_to 'Edit', edit_announcement_path(announcement) %></td>
-    <td><%= link_to 'Destroy', announcement, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', batch_announcement_path(@batch, announcement) %></td>
+    <td><%= link_to 'Edit', edit_batch_announcement_path(@batch, announcement) %></td>
+    <td><%= link_to 'Destroy', batch_announcement_path(@batch, announcement), method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Announcement', new_announcement_path %>
+<%= link_to 'New Announcement', new_batch_announcement_path(@batch) %>
