--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -1,5 +1,1 @@
-<%= fields_for :asset, Asset.new do |aform| %>
-  <div class="field">
-      <%= aform.file_field :afile %>
-  </div>
-<% end %>
+<p><%= link_to_add_fields "Add File", f, :assets %></p>
