--- a/app/views/announcements/_form.html.erb
+++ b/app/views/announcements/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@announcement) do |f| %>
+<%= form_for [@batch, @announcement] do |f| %>
   <% if @announcement.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@announcement.errors.count, "error") %> prohibited this announcement from being saved:</h2>
@@ -13,15 +13,10 @@
 
   <div class="field">
     <%= f.label :message %><br />
-    <%= f.text_area :message %>
+    <%= f.text_area :message, :rows => 4 %>
   </div>
   <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
-  </div>
-  <div class="field">
-    <%= f.label :batch %><br />
-    <%= f.text_field :batch %>
+      <%= render partial: "assets/form", locals: {f: f} %>
   </div>
   <div class="actions">
     <%= f.submit %>
