--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,11 +11,36 @@
  *= require_self
  *= require_tree .
  */
+*{
 
- #notice{
+	font-family: 'Metrophobic', sans-serif !important;
+}
+body{
+	margin: 0px;
+	padding: 0px;
+	width: 100%;
+}
+
+#notice{
  	position: fixed;
 	top: 0px;
 	left: 0px;
 	width: 100%;
 	text-align: center;
- }
+}
+
+.top-nav-bar{
+	width : 100%;
+	height : 5%;
+	background: rgb(9, 143, 109); 
+	position : fixed;
+	top : 0px;
+	left : 0px;
+	margin-bottom: 1%;
+}
+
+.content{
+	margin-top: 5%;
+	width : 100%;
+	max-width: 100%;
+}
