--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,20 +5,27 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <!-- p class="notice"><%= notice %></p -->
 <p class="alert"><%= alert %></p>
-<% if user_signed_in?
-%>
-	<%= link_to "Logout", destroy_user_session_path %>
-<%
-else
-%>
-	<%= link_to "Login", new_user_session_path %>
-<%
-end %>
-<%= yield %>
+<div class="top-nav-bar">
 
+	<% if user_signed_in?
+	%>
+		<%= link_to "Logout", destroy_user_session_path, :method => :delete %>
+	<%
+	else
+	%>
+		<%= link_to "Login", new_user_session_path %>
+	<%
+	end %>
+
+</div>
+
+<div class="content">
+	<%= yield %>
+</div>
 </body>
 </html>
