--- a/app/views/chats/create.js.erb
+++ b/app/views/chats/create.js.erb
@@ -1,5 +1,10 @@
-<% broadcast "/chats/new" do %>
-	$("#chat").append("<%= @chat.content %>");
-<% end %>
 
-$('#chat_content').reset();
+<% 
+Rails.logger.info("CHAT OWNER : #{@chat.owner.email} RECIPIENT : #{@recipient.email} CURRENT USER : #{current_user.email}")
+	broadcast "/chats/new/#{Digest::MD5.hexdigest(@recipient.email)}", @recipient, @chat_tokens do 
+
+%>
+	$("#chat").append("<li class='chatmessage'><%= @chat.content %></li>");
+<% 
+	end 
+%>
