--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
 	<% if user_signed_in?
 	%>
 		<%= link_to "Logout", destroy_user_session_path, :method => :delete %>
+		<div id="currentEmail">	<%= current_user.email %>  </div>
+		<div id="currentHash"> <%= Digest::MD5.hexdigest(current_user.email) %> </div>
 	<%
 	else
 	%>
