--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -8,3 +8,15 @@
 	<%= f.text_field :content %>
 	<%= f.submit "Send" %>
 <% end %>
+
+<script type="text/javascript">
+	$(function(){
+		var faye = new Faye.Client('http://localhost:9292/faye');
+		faye.subscribe('/chats/new/<%=@chat_listen_hash%>', function(data){
+			console.log('SUBSCRIBED TO : /chats/new/<%= @chat_listen_hash %>');
+			console.log("data : "+data);
+			eval(data);
+		});
+	});
+
+</script>
