--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,21 +1,47 @@
 <h2>Chat</h2>
-
-<ul id="chat">
-	
+<ul class="users" id="users">
+	<% @users.each do |user| %>
+		<li data-token="<%=Digest::MD5.hexdigest(user.email)%>" id="<%=user.id%>"> <%= user.email %> </li>
+	<% end %>
 </ul>
 
-<%= form_for Chat.new, :remote => true do |f| %>
-	<%= f.text_field :content %>
-	<%= f.submit "Send" %>
-<% end %>
+
+<div id="chatWindows" class="chatWindows">
+
+</div>
+
+
 
 <script type="text/javascript">
 	$(function(){
 		var faye = new Faye.Client('http://localhost:9292/faye');
 		faye.subscribe('/chats/new/<%=@chat_listen_hash%>', function(data){
-			console.log('SUBSCRIBED TO : /chats/new/<%= @chat_listen_hash %>');
-			console.log("data : "+data);
 			eval(data);
+		});
+
+		var chat_window = function(id, data_token){
+
+			var chat_form = '<div class="chatWindow '+id+'" class="chatWindow"><ul class="chat"></ul>'+
+					'<%= form_for Chat.new, :remote => true do |f| %>'+
+						'<%= f.text_field :content %>'+
+						'<div class="hiddens '+id+'">'+ 
+						'<input type="hidden" class="currentChats" name="chat[currentChats]" value="'+id+'" data-token="'+data_token+'" />' +
+						'</div>'+
+						'<%= f.submit "Send" %>'+
+					'<% end %>'+
+					'</div>' ;
+			return chat_form;
+		};
+
+
+		$('body').on('submit', '#new_chat', function(){
+			$(this).siblings('.chat').append("<li class='chatmessage'>"+ $(this).find('#chat_content').val() +"</li>");
+		});
+
+		$('.users li').click(function(){
+			var id = $(this).attr('id');
+			var data_token = $(this).attr('data-token');
+			$('#chatWindows').append(chat_window(id, data_token));
 		});
 	});
 
