--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,12 @@ body{
 	padding: 0px;
 	width: 100%;
 }
+.small{
+	font-size: 12px;
+}
+.blur{
+	color: rgba(0,0,0,0.5);
+}
 
 #notice{
  	position: fixed;
@@ -39,8 +45,65 @@ body{
 	margin-bottom: 1%;
 }
 
+.top-nav-bar div{
+	display: inline-block;
+	float: right;
+	margin-left: 10px;
+}
+
 .content{
 	margin-top: 5%;
 	width : 100%;
 	max-width: 100%;
+}
+
+.chatWindows{
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+}
+
+.chatWindow{
+	position: relative;
+	float: right;
+	box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.4);
+	width: 300px;
+	margin: 0px 5px;
+}
+
+.chatHeader{
+	width: 100%;
+	padding: 5px 0px;
+	background: rgba(0,0,0,0.8);
+	color: rgba(255,255,255,1);
+	cursor: pointer;
+}
+
+.chatHeader div{
+	display: inline-block;
+}
+
+.chatHeader .chatName{
+	width: 85%;
+	margin-left: 2%;
+}
+
+.chatHeader .chatMinimize{
+	width: 5%;
+	margin-left: 1%;
+}
+
+.chatHeader .chatClose{
+	width: 5%;
+	margin-left: 2%;
+}
+
+.chatHeader .chatMinimize:hover, .chatHeader .chatClose:hover{
+	color: rgba(255,255,255,0.5);
+}
+
+.chatWindow .chat_content_div{
+	width : 90%;
+	border: 1px solid rgba(0,0,0,0.5);
+	min-height: 50px;
 }
