--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 	%>
 		<%= link_to "Logout", destroy_user_session_path, :method => :delete %>
 		<div id="currentEmail">	<%= current_user.email %>  </div>
+		<div id="currentName"> <%= current_user.firstname.humanize %> <%= current_user.lastname.humanize %> </div>
 		<div id="currentHash" style="display : none;"> <%= Digest::MD5.hexdigest(current_user.email) %> </div>
 	<%
 	else
