--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing batches</h1>
+<h1>Listing batches for <%= link_to @department.name, institute_departments_path(@institute) %> of <%= link_to @institute.name, institutes_path %></h1>
 
 <table>
   <tr>
