--- a/app/views/institutes/show.html.erb
+++ b/app/views/institutes/show.html.erb
@@ -38,3 +38,4 @@
 
 <%= link_to 'Edit', edit_institute_path(@institute) %> |
 <%= link_to 'Back', institutes_path %>
+<%= link_to 'Departments', institute_departments_path(@institute) %>
