--- a/app/views/public_activity/announcement/_create.html.erb
+++ b/app/views/public_activity/announcement/_create.html.erb
@@ -1,7 +1,7 @@
 <div class="listactivities">
 <% if activity.trackable %>
 	
-	<%= link_to activity.owner.email, user_path(activity.owner), :class => "userprofilelink" if activity.owner %>
+	<%= link_to activity.owner.email, user_profile_path(activity.owner), :class => "userprofilelink" if activity.owner %>
 	has uploaded new  
 	<%= link_to "announcement", batch_announcement_path(activity.trackable.batch, activity.trackable) %>
 <% else %>
