--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,6 +39,55 @@ body{
 	width: 100%;
 }
 
+input:not([type=submit]),textarea {
+  background:  -moz-linear-gradient(top, #f7f7f8 0%, #ffffff 100%);
+  background:  -webkit-linear-gradient(top, #f7f7f8 0%, #ffffff 100%);
+  background:  -o-linear-gradient(top, #f7f7f8 0%, #ffffff 100%);
+  background:  -ms-linear-gradient(top, #f7f7f8 0%, #ffffff 100%);
+  background:  linear-gradient(to bottom, #f7f7f8 0%, #ffffff 100%);
+  border-radius: 3px;
+  border: 1px solid rgba(0,0,0,0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset, 0 -1px 0 rgba(0, 0, 0, 0.05) inset;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  font-size: 13px;
+  color: #222222;
+  padding: 0.7em;
+}
+input:not([type=submit])::-webkit-input-placeholder {
+  color: #999999;
+}
+input:not([type=submit]):-moz-placeholder {
+  color: #999999;
+}
+input:not([type=submit]):focus,textarea:focus {
+  box-shadow: 0 1px 0 #2392f3 inset, 0 -1px 0 #2392f3 inset, 1px 0 0 #2392f3 inset, -1px 0 0 #2392f3 inset, 0 0 4px rgba(35, 146, 243, 0.5);
+  outline: none;
+}
+
+input[type=submit],button,.button,.button:hover {
+	border: 1px solid #CECECE;
+	color: black;
+	background: #EEEEEE;
+	text-decoration: none;
+	padding: 7px;
+	border-radius: 2px;
+	box-shadow: 0px 0px 0.5px 0.5px rgba(0,0,0,0.1);
+	cursor: pointer;
+	color: black;
+}
+
+h1{
+	font-size: 20px;
+	color: rgba(0,0,0,0.7);
+	border-bottom: 1px solid rgba(0,0,0,0.3);
+	padding-bottom: 5px;
+	width: 100%;
+}
+
 ::-webkit-scrollbar
 {
   width: 5px;  /* for vertical scrollbars */
@@ -74,6 +123,95 @@ body{
 
 .left{
 	text-align:left;
+}
+
+#backdrop{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 5;
+	background: rgba(0,0,0,0.7);
+	top: 0px;
+	left: 0px;
+	margin: 0px;
+	padding: 0px;
+	display: none;
+}
+
+#loader{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 6;
+	top: 0px;
+	left: 0px;
+	margin: 0px;
+	padding: 0px;
+	text-align: center;
+	display: none;
+}
+
+.loaderContent{
+	width: 100%;
+	position: fixed;
+	top: 47%;
+	font-size: +2em;
+	font-weight: bold;
+	color: rgba(250,250,250,0.9);
+}
+
+#modal{
+	width: 90%;
+	height: 90%;
+	background: white;
+	position: fixed;
+	top: 5%;
+	left: 115%;
+	padding: 0px;
+	z-index: 8;
+}
+
+#modalClose{
+	width: 5%;
+	text-align: center;
+	padding: 10px 0px;
+	position: fixed;
+	top: 5%;
+	right: -115%;
+	background: rgba(209, 16, 16, 1);
+	color: white;
+	z-index: 8;
+	cursor: pointer;
+}
+
+.outerPrompt {
+    display: none;
+    opacity: 0;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    padding: 0px;
+    height: 100%;
+    width: 100%;
+    z-index: 9;
+}
+
+.middlePrompt {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    z-index: 9;
+    width: 100%;
+}
+
+.innerPrompt {
+   	margin: 0px auto;
+    background: white;
+    padding: 5px 15px;
+    display: inline-block;
+    text-align: left;
+    z-index: 9;
 }
 
 #notice{
