--- a/app/views/institutes/_form.html.erb
+++ b/app/views/institutes/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label :address %><br />
-    <%= f.text_area :address %>
+    <%= f.text_area :address, :rows => 4 %>
   </div>
   <div class="field">
     <%= f.label :year_estd %><br />
