submit feedback forms by student

--- a/app/views/feedback/show.html.erb
+++ b/app/views/feedback/show.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag( batch_feedback_submit_path(@batch, @form), :method => :post) do %>
+<%= form_tag( batch_feedback_index_path(@batch), :method => :post) do %>
   <% @form.fields.each do |f| %>
     <div class="field">
       <%= label_tag "field_#{f.id}", f.name %> <br />
