added forms link to right navigation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
                 <li class="rightNavbarListItem"><%= link_to "Timeline", timelines_path %></li>
                 <li class="rightNavbarListItem"><%= link_to "Documents", batch_documents_path(current_user.batch) %></li>
                 <li class="rightNavbarListItem"><%= link_to "Announcements", batch_announcements_path(current_user.batch) %></li>
+                <li class="rightNavbarListItem"><%= link_to "Forms", forms_path %></li>
                 <li class="rightNavbarListItem"><%= link_to "Feedbacks", batch_feedback_index_path(current_user.batch) %></li>
                 <li class="rightNavbarListItem"><%= link_to "Review My Feedbacks", overview_batch_feedback_index_path(current_user.batch) %></li>
             </ul>
