--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -1,5 +1,7 @@
+<%= link_to("Add Form", new_form_path) %>
+<h2>Forms</h2>
 <ul>
   <% @forms.each do |form| %>
-    <li><%= form.name %></li>
+    <li><%= link_to(form.name, form_path(form) ) %></li>
   <% end %>
 </ul>
