--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,11 +32,24 @@ src: url('fonts/entypo.eot?#iefix') format('embedded-opentype'),
 *{
 
 	font-family: 'Arial', sans-serif;
+	font-size: 12pt;
 }
 body{
 	margin: 0px;
 	padding: 0px;
 	width: 100%;
+
+}
+
+a{
+	color: rgba(204, 102, 0, 0.8);
+	padding: 3pt;
+	display: inline-block;
+}
+
+a:hover{
+	color: rgba(204, 102, 0, 1) !important;
+	background: none !important;
 }
 
 input:not([type=submit]),textarea {
@@ -83,7 +96,6 @@ input[type=submit],button,.button,.button:hover {
 h1{
 	font-size: 20px;
 	color: rgba(0,0,0,0.7);
-	border-bottom: 1px solid rgba(0,0,0,0.3);
 	padding-bottom: 5px;
 	width: 100%;
 }
@@ -106,7 +118,7 @@ h1{
 }
 
 .small{
-	font-size: 12px;
+	font-size: 11px;
 }
 
 .smaller{
@@ -123,6 +135,31 @@ h1{
 
 .left{
 	text-align:left;
+}
+
+.high{
+
+}
+
+table{
+	width: 100%;
+	border: 1px solid rgba(0,0,0,0.2);
+	border-radius: 3px;
+}
+
+table td{
+	padding: 10pt;
+	text-align: center;
+}
+
+table th{
+	font-size: 14px;
+	font-weight: bold;
+	background: rgba(0,0,0,0.1);
+}
+
+table tr:nth-child(even){
+	background: rgba(0,0,0,0.02);
 }
 
 #backdrop{
@@ -224,13 +261,15 @@ h1{
 
 .top-nav-bar{
 	width : 100%;
-	height : 5%;
+	height : 10%;
 	background: rgb(9, 143, 109); 
 	position : fixed;
 	top : 0px;
 	left : 0px;
 	margin-bottom: 1%;
 	color: #EFEFEF;
+	box-shadow: 0px 3px 10px -3px rgba(0,0,0,1);
+	z-index: 999;
 }
 
 .top-nav-bar div{
@@ -239,22 +278,38 @@ h1{
 	margin-left: 10px;
 }
 
+.top-nav-bar a{
+	color: white;
+}
+
 .rightNavbar{
 	position: fixed;
-	right: 2%;
-	top: 20%;
-	z-index: 333;
-	border: 1px solid rgba(0,0,0,0.2);
+	left: 0%;
+	top: 10%;
+	height: 100%;
+	width: 15%;
+	border-right: 1px solid rgba(0,0,0,0.1);
+	background: rgba(0,0,0,0.02);
+	z-index: 2;
 }
 
 .rightNavbar ul{
 	list-style: none;
-	margin: 0px;
+	margin-top: 10%;
 	padding: 0px;
 }
 
 .rightNavbar ul li{
-	padding: 5px;
+	padding: 10pt;
+}
+
+.rightNavbar a{
+	text-decoration: none;
+	width: 100%;
+}
+
+.rightNavbar ul li:hover{
+	background: rgba(0,0,0,0.02);
 }
 
 
@@ -272,9 +327,11 @@ a:visited.loginLogoutUser{
 }
 
 .content{
-	margin-top: 5%;
-	width : 100%;
-	max-width: 100%;
+	position: absolute;
+	left: 20%;
+	top: 15%;
+	width: 80%;
+	overflow-y: scroll;
 }
 
 .chatWindows{
@@ -373,6 +430,22 @@ a:visited.loginLogoutUser{
 	overflow-y:scroll;
 	max-height: 25% !important;
 }
+
+/* Login page Styles */
+.loginWrapper{
+	margin: 0px auto;
+	border: 1px solid rgba(0,0,0,0.1);
+	width: 30%;
+	text-align: center;
+	background: rgba(2, 132, 130,0.2);
+	padding: 1%;
+}
+
+.footerWrapper{
+	text-align: left;
+}
+/* End Login page Styles */
+
 
 /* ICONS */
 .icon:before{font:40px/.05 'EntypoRegular';margin-right:5px;vertical-align:top;text-decoration:none;display:inline-block;zoom:1;*display:inline;_height:36px}
