--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing departments of <%= link_to @institute.name, institutes_path %></h1>
+<h1>Departments of <%= link_to @institute.name, institutes_path %></h1>
 
 <table>
   <tr>
