--- a/app/views/public_activity/document/_create.html.erb
+++ b/app/views/public_activity/document/_create.html.erb
@@ -2,8 +2,10 @@
 <% if activity.trackable %>
 	<%= link_to activity.owner.email, user_profile_path(activity.owner) %>
 	has uploaded new  
-	<%= link_to "document", batch_document_path(activity.trackable.batch, activity.trackable) %>
+	document - 
 	<p><%= link_to activity.trackable.title, batch_document_path(activity.trackable.batch, activity.trackable) %></p>
+	<br>
+	<div class="small blur right">posted on <%= ist activity.trackable.created_at %> </div>
 <% else %>
   which has since been removed
 <% end %>
