--- a/app/views/announcements/edit.html.erb
+++ b/app/views/announcements/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', batch_announcement_path(@batch, @announcement) %> |
+<%= link_to '', batch_announcement_path(@batch, @announcement), :class => "eye icon", :title => "Show Details" %> |
 <%= link_to 'Back', batch_announcements_path(@batch) %>
