--- a/app/views/batches/edit.html.erb
+++ b/app/views/batches/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', institute_department_batch_path(@institute, @department, @batch) %> |
+<%= link_to '', institute_department_batch_path(@institute, @department, @batch), :class => "eye icon", :title => "Show Details" %> |
 <%= link_to 'Back', institute_department_batches_path(@institute, @department) %>
