--- a/app/views/chat_tokens/edit.html.erb
+++ b/app/views/chat_tokens/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @chat_token %> |
+<%= link_to '', @chat_token, :class => "eye icon", :title => "Show Details" %> |
 <%= link_to 'Back', chat_tokens_path %>
