--- a/app/views/chat_tokens/index.html.erb
+++ b/app/views/chat_tokens/index.html.erb
@@ -17,7 +17,7 @@
     <td><%= chat_token.owner_id %></td>
     <td><%= chat_token.receipient_id %></td>
     <td><%= chat_token.status %></td>
-    <td><%= link_to 'Show', chat_token %></td>
+    <td><%= link_to '', chat_token, :class => "eye icon", :title => "Show Details" %></td>
     <td><%= link_to 'Edit', edit_chat_token_path(chat_token) %></td>
     <td><%= link_to 'Destroy', chat_token, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
