--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,76 +1,1 @@
-<h2>Chat</h2>
-<ul class="users" id="users">
-	<% @users.each do |user| 
-		if current_user != user
-		then
-	%>
-		
-		<li data-token="<%=Digest::MD5.hexdigest(user.email)%>" data-name="<%= user.firstname.humanize %> <%= user.lastname.humanize %>" id="<%=user.id%>"> <%= user.email %> </li>
-	<%
-		end
-	end %>
-</ul>
-
-
-<div id="chatWindows" class="chatWindows">
-
-</div>
-
-
-
-<script type="text/javascript">
-	$(function(){
-		var faye = new Faye.Client('http://localhost:9292/faye');
-		faye.subscribe('/chats/new/<%=@chat_listen_hash%>', function(data){
-			eval(data);
-		});
-
-		var chat_window = function(id, data_token, name){
-
-			var chat_form = '<div class="chatWindow '+id+'"><div class="chatHeader"><div class="chatName">'+name+'</div><div class="chatMinimize minus icon" title="minimize"></div><div class="chatClose xmark icon" title="close"></div></div><ul class="chat"></ul>'+
-					'<%= form_for Chat.new, :remote => true do |f| %>'+
-						'<div class="hiddens '+id+'">'+ 
-						'<input type="hidden" class="currentChats" name="chat[currentChats]" value="'+id+'" data-token="'+data_token+'" />' +
-						'</div>'+
-						'<%= f.text_field :content, :style => "display:none" %>'+
-						'<div class="chat_content_div" contenteditable="true"></div>'+
-						'<%= f.submit "", :class => "submitChat rightarrowcircle icon" %>'+
-					'<% end %>'+
-					'</div>';
-			return chat_form;
-		};
-
-		var chat_message = function(msg, sender, sent_time){
-			if(sender == $('#currentName').html())
-			{
-				var message_html = '<li class="chatmessage right">'+
-				'<div class="senderName right"> '+sender+' </div> <div class="chatMessage">'+msg+'</div><div class="chatTime smaller blur right">'+sent_time+'</div></li>';
-				return message_html;
-			}
-			var message_html = '<li class="chatmessage left">'+
-				'<div class="senderName"> '+sender+' </div> <div class="chatMessage">'+msg.trim()+'</div><div class="chatTime smaller blur left">'+sent_time+'</div></li>';
-			return message_html;
-		};
-
-		$('.chatWindows').on('submit', '#new_chat', function(e){
-			//e.preventDefault();
-			$(this).find('#chat_content').val($(this).find('.chat_content_div').html());
-			var msg = $(this).find('#chat_content').val();
-			var sender = $('#currentName').html();
-			if(msg != ""){
-				$(this).siblings('.chat').append(chat_message(msg, sender, moment().calendar()));
-				//$(this).submit();
-			}
-			$(this).find('.chat_content_div').empty();
-		});
-
-		$('.users li').click(function(){
-			var id = $(this).attr('id');
-			var data_token = $(this).attr('data-token');
-			var name = $(this).attr('data-name');
-			$('#chatWindows').append(chat_window(id, data_token, name));
-		});
-
-	});
-
-</script>
+<%= render "chat" %>
