--- a/app/views/departments/edit.html.erb
+++ b/app/views/departments/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', institute_department_path(@institute, @department) %> |
+<%= link_to '', institute_department_path(@institute, @department), :class => "eye icon", :title => "Show Details" %> |
 <%= link_to 'Back', institute_departments_path(@institute) %>
