--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', batch_document_path(@batch, @document) %> |
+<%= link_to '', batch_document_path(@batch, @document), :class => "eye icon", :title => "Show Details" %> |
 <%= link_to 'Back', batch_documents_path(@batch) %>
