--- a/app/views/institutes/edit.html.erb
+++ b/app/views/institutes/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @institute %> |
+<%= link_to '', @institute, :class => "eye icon", :title => "Show Details" %> |
 <%= link_to 'Back', institutes_path %>
