--- a/app/views/labels/edit.html.erb
+++ b/app/views/labels/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @label %> |
+<%= link_to '', @label, :class => "eye icon", :title => "Show Details" %> |
 <%= link_to 'Back', labels_path %>
