--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,7 +32,7 @@ src: url('fonts/entypo.eot?#iefix') format('embedded-opentype'),
 *{
 
 	font-family: 'Arial', sans-serif;
-	font-size: 12pt;
+	font-size: 11pt;
 }
 body{
 	margin: 0px;
@@ -259,9 +259,22 @@ table tr:nth-child(even){
 	text-align: center;
 }
 
+.header{
+	width: 100%;
+	padding: 5pt;
+	background: rgba(0,0,0,0.8);
+	color: white;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+#currentName{
+	display: none;
+}
+
 .top-nav-bar{
 	width : 100%;
-	height : 10%;
+	min-height : 50pt;
 	background: rgb(9, 143, 109); 
 	position : fixed;
 	top : 0px;
@@ -276,13 +289,26 @@ table tr:nth-child(even){
 	display: inline-block;
 	float: right;
 	margin-left: 10px;
+	padding-top: 1%;
 }
 
 .top-nav-bar a{
 	color: white;
 }
 
-.rightNavbar{
+.top-nav-bar .icon{
+	cursor: pointer;
+}
+
+.top-nav-bar .icon:before{
+	font-size: 40pt !important;
+}
+
+.top-nav-bar .icon:hover{
+	color: rgba(255,255,255,1)!important;
+}
+
+.leftNavbar{
 	position: fixed;
 	left: 0%;
 	top: 10%;
@@ -293,25 +319,53 @@ table tr:nth-child(even){
 	z-index: 2;
 }
 
-.rightNavbar ul{
+.leftNavbar ul{
 	list-style: none;
 	margin-top: 10%;
 	padding: 0px;
 }
 
-.rightNavbar ul li{
+.leftNavbar ul li{
 	padding: 10pt;
 }
 
-.rightNavbar a{
+.leftNavbar a{
 	text-decoration: none;
 	width: 100%;
 }
 
-.rightNavbar ul li:hover{
+.leftNavbar ul li:hover{
 	background: rgba(0,0,0,0.02);
 }
 
+.rightNavbar{
+	position: fixed;
+	right: -20%;
+	top: 10%;
+	width: 15%;
+	min-width: 150px;
+	height: 90%;
+	z-index: 2;
+	border: 1px solid rgba(0,0,0,0.1);
+	background: rgba(250,250,250,1);
+}
+
+.rightNavbar ul{
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
+
+.rightNavbar ul li{
+	padding: 10pt;
+	word-wrap: normal;
+}
+
+.rightNavbar ul li:hover{
+	background: rgba(0,0,0,0.02);
+	border: 1px thin rgba(0,0,0,0.1);
+	cursor: pointer;
+}
 
 .loginLogoutUser{
 	float: right;
@@ -331,7 +385,7 @@ a:visited.loginLogoutUser{
 	left: 20%;
 	top: 15%;
 	width: 80%;
-	overflow-y: scroll;
+	//overflow-y: scroll;
 }
 
 .chatWindows{
@@ -339,6 +393,7 @@ a:visited.loginLogoutUser{
 	bottom: 0px;
 	width: 100%;
 	max-height: 50%;
+	z-index: 7;
 }
 
 .chatWindow{
@@ -348,14 +403,15 @@ a:visited.loginLogoutUser{
 	width: 300px;
 	margin: 0px 5px;
 	font-size: small !important;
+	background: rgba(255,255,255,1);
 }
 
 .chatHeader{
 	width: 100%;
 	padding: 5px 0px;
-	background: rgba(0,0,0,0.8);
 	color: rgba(255,255,255,1);
 	cursor: pointer;
+	text-transform: capitalize;
 }
 
 .chatHeader div{
@@ -446,8 +502,23 @@ a:visited.loginLogoutUser{
 }
 /* End Login page Styles */
 
+/* Timelines styling */
+.timelinesHeader{
+	width: 20%;
+	margin-bottom: 10pt;
+}
+
+.timelineProfilePic{
+	padding: 0px 5px;
+	vertical-align: text-top;
+}
+/* Timelines styling End */
+
 
 /* ICONS */
+.icon{
+	color:rgba(255,255,255,0.8);
+}
 .icon:before{font:40px/.05 'EntypoRegular';margin-right:5px;vertical-align:top;text-decoration:none;display:inline-block;zoom:1;*display:inline;_height:36px}
 icon.aria{text-indent:-9999px;overflow:hidden;display:inline-block;position:relative;min-width:16px}
 icon.aria:before{position:absolute;left:0;top:0;text-indent:0}
