--- a/app/views/assets/edit.html.erb
+++ b/app/views/assets/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @asset %> |
+<%= link_to '', @asset, :class => "eye icon", :title => "Show Details" %> |
 <%= link_to 'Back', assets_path %>
