--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -13,7 +13,7 @@
 <% @assets.each do |asset| %>
   <tr>
     <td><%= asset.assetable %></td>
-    <td><%= link_to 'Show', asset %></td>
+    <td><%= link_to '', asset, :class => "eye icon", :title => "Show Details" %></td>
     <td><%= link_to 'Edit', edit_asset_path(asset) %></td>
     <td><%= link_to 'Destroy', asset, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
