--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -19,7 +19,7 @@
     <td><%= document.batch.name %></td>
     <td><%= document.user.email %></td>
     <td><%= document.labelable.name if document.labelable != nil %> </td>
-    <td><%= link_to 'Show', batch_document_path(@batch, document) %></td>
+    <td><%= link_to '', batch_document_path(@batch, document), :class => "eye icon", :title => "Show Details" %></td>
     <td><%= link_to 'Edit', edit_batch_document_path(@batch, document) %></td>
     <td><%= link_to 'Destroy', batch_document_path(@batch, document), method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
