--- a/app/views/institutes/index.html.erb
+++ b/app/views/institutes/index.html.erb
@@ -21,7 +21,7 @@
     <td><%= institute.contact_email %></td>
     <td><%= institute.address %></td>
     <td><%= institute.year_estd %></td>
-    <td><%= link_to 'Show', institute %>
+    <td><%= link_to '', institute, :class => "eye icon", :title => "Show Details" %>
     <%= link_to 'Edit', edit_institute_path(institute) %>
     <%= link_to 'Destroy', institute, method: :delete, data: { confirm: 'Are you sure?' } %>
     <%= link_to "Departments", institute_departments_path(institute) %></td>
