--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -11,7 +11,7 @@
 <% @labels.each do |label| %>
   <tr>
     <td><%= label.name %></td>
-    <td><%= link_to 'Show', label %></td>
+    <td><%= link_to '', label, :class => "eye icon", :title => "Show Details" %></td>
     <td><%= link_to 'Edit', edit_label_path(label) %></td>
     <td><%= link_to 'Destroy', label, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
