--- a/app/views/public_activity/announcement/_create.html.erb
+++ b/app/views/public_activity/announcement/_create.html.erb
@@ -1,11 +1,13 @@
 <div class="listactivities">
 <% if activity.trackable %>
 	
-	<%= link_to activity.owner.email, user_profile_path(activity.owner), :class => "userprofilelink" if activity.owner %>
-	has uploaded new  
+	<%= image_tag activity.owner.avatar.url(:thumb), :class=>"timelineProfilePic" %><%= link_to "#{activity.owner.firstname} #{activity.owner.lastname}", user_profile_path(activity.owner), :class => "userprofilelink" if activity.owner %>
+	has a new  
 	<%= link_to "announcement", batch_announcement_path(activity.trackable.batch, activity.trackable) %>
 	<br>
 	<div class="small blur right">posted on <%= ist activity.trackable.created_at %> </div>
+
+
 <% else %>
   which has since been removed
 <% end %>
