--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -23,8 +23,8 @@
 
 	<p class="field">
 		<%= f.label :avatar %>
-		<%= f.file_field  :avatar %>
-		<%= image_tag @user.avatar.url, :style => "width : 150px;" %>
+		<%= f.file_field  :avatar, :class => "profilePicInput" %>
+		<%= image_tag @user.avatar.url, :style => "max-width : 150px;", :class => "profilePicImg" %>
 	</p>
 
 	<p class="actions">
